@@ -1,5 +1,8 @@
 2011-06-17  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (BridgeConnection.handle_connection): Move from
+	a top-level function.
+
 	* src/bridge.py (handle_connection): Move all connection-specific code
 	from bridge_one_request here.
 
